--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script src="jspsych/dist/plugin-survey-multi-choice.js"></script>
   <script src="jspsych/dist/plugin-survey-multi-select.js"></script>
   <script src="jspsych/dist/plugin-preload.js"></script>
+  <script src="jspsych/dist/plugin-survey-multi-choice.js"></script>
   <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
  
   <!-- Chart -->
@@ -54,7 +55,6 @@
 
 <body>
   <div id="jspsych-target" class="jspsych-display-element"></div>
-  <script src="conditions.js"></script>
   <script src="experiment.js"></script>
 </body>
 
